--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
